--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass-embedded": "^1.80.6",
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "colorjs.io": "^0.5.2"
   }
 }
