--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "esbuild": "^0.24.0",
     "sass-embedded": "^1.80.6",
     "vite": "^5.4.10"
   },
